tests/NormalTests/paczka1/small_fuzzy/94186477.err
Error in line 9: xffLY A7e1 18,e
Error in line 8: vBxsBZeEKC S312 6,7
Error in line 11: Z3ywYaeERf3 A535 50,5
Error in line 14: Z3ywYaeERf3 A561 46,2
